--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   dotted_border: ^2.0.0+1
+  geolocator: ^7.4.0
 
 dev_dependencies:
   flutter_test:
