added android intent in pubsec to gain access to android settings page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
     git:
       url: git://github.com/Baseflow/baseflow_plugin_template.git
       ref: v2.0.0-nullsafety
+  android_intent: ^2.0.2
 
 dev_dependencies:
   flutter_test:
