--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   geolocator: ^7.4.0
   android_intent: ^2.0.2
   permission_handler: ^8.1.4+2
-  geocoder: ^0.2.1
+  http: ^0.13.3
+  geocoding: ^2.0.0
 
 dev_dependencies:
   flutter_test:
