--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   permission_handler: ^8.1.4+2
   http: ^0.13.3
   geocoding: ^2.0.0
+  flutter_svg: ^0.22.0
+  persistent_bottom_nav_bar: ^4.0.2
 
 dev_dependencies:
   flutter_test:
