added bloc package in dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geocoding: ^2.0.0
   flutter_svg: ^0.22.0
   persistent_bottom_nav_bar: ^4.0.2
+  flutter_bloc: ^7.1.0
 
 dev_dependencies:
   flutter_test:
