--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_svg: ^0.22.0
   persistent_bottom_nav_bar: ^4.0.2
   flutter_bloc: ^7.1.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
