--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,9 @@ dependencies:
   geocoding: ^2.0.0
   flutter_svg: ^0.22.0
   persistent_bottom_nav_bar: ^4.0.2
-  flutter_bloc: ^7.1.0
   provider: ^6.0.0
+  flutter_appauth: ^1.1.0
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
