--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,7 @@ android {
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        manifestPlaceholders = [appAuthRedirectScheme: 'com.redirectScheme.comm']
+        manifestPlaceholders = ['appAuthRedirectScheme': 'com.example.cuisine']
     }
 
     buildTypes {
