--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,12 +43,12 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.cuisine"
+        applicationId "com.auth0.cuisine"
         minSdkVersion 18
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        manifestPlaceholders = ['appAuthRedirectScheme': 'com.example.cuisine']
+        manifestPlaceholders = ['appAuthRedirectScheme': 'com.auth0.cuisine']
     }
 
     buildTypes {
