--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   provider: ^6.0.0
   flutter_appauth: ^1.1.0
   flutter_secure_storage: ^4.2.1
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
