looked upon the unused dependencies.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_appauth: ^1.1.0
   flutter_secure_storage: ^4.2.1
   shared_preferences: ^2.0.7
+  json_annotation: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   change_app_package_name: ^1.0.0
   lottie: ^1.1.0
+  build_runner: ^2.1.1
+  json_serializable: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
