--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   shared_preferences: ^2.0.7
   json_annotation: ^4.1.0
+  palette_generator: ^0.3.1
 
 dev_dependencies:
   flutter_test:
