--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shared_preferences: ^2.0.7
   json_annotation: ^4.1.0
   palette_generator: ^0.3.1
+  badges: ^2.0.1
 
 dev_dependencies:
   flutter_test:
