--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   json_annotation: ^4.1.0
   palette_generator: ^0.3.1
   badges: ^2.0.1
+  cached_network_image: ^3.1.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,12 @@ dev_dependencies:
   lottie: ^1.1.0
   build_runner: ^2.1.1
   json_serializable: ^5.0.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
