--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,7 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/logo.png"
-
+  adaptive_icon_foreground: "assets/logo_foreground.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
