--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   badges: ^2.0.1
   cached_network_image: ^3.1.0
   shimmer: ^2.0.0
+  optimized_cached_image: ^3.0.0
 
 dev_dependencies:
   flutter_test:
