--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,17 +102,27 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: lato
+      fonts:
+        - asset: assets/fonts/lato/lato-black.ttf
+        - asset: assets/fonts/lato/lato-Regular.ttf
+    - family: rt_sans
+      fonts:
+        - asset: assets/fonts/rt_sans/PTSans-Regular.ttf
+        - asset: assets/fonts/rt_sans/PTSans-Bold.ttf
+          weight: 700
+    - family: rubik
+      fonts:
+        - asset: assets/fonts/rubik/Rubik-Italic-VariableFont_wght.ttf
+        - asset: assets/fonts/rubik/static/Rubik-Black.ttf
+        - asset: assets/fonts/rubik/static/Rubik-Regular.ttf
+        - asset: assets/fonts/rubik/static/Rubik-Regular.ttf
+          weight: 700
+    - family: bubblegum
+      fonts:
+        - asset: assets/fonts/bubblegum_sans/bubblegumsans-regular.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
