--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   cached_network_image: ^3.1.0
   shimmer: ^2.0.0
   optimized_cached_image: ^3.0.0
+  email_validator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
