--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   shimmer: ^2.0.0
   optimized_cached_image: ^3.0.0
   email_validator: ^2.0.1
+  flutter_cart: ^0.0.6
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
@@ -70,12 +72,17 @@ dev_dependencies:
   build_runner: ^2.1.1
   json_serializable: ^5.0.0
   flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^1.2.4
 
 flutter_icons:
   android: true
   ios: true
   image_path: "assets/logo.png"
   adaptive_icon_background: "#44DEFF"
+
+flutter_native_splash:
+  image: assets/logo.png
+  color: "#FFFFFF"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
