--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ TODO.txt
 
 
 android/app/build/outputs/apk/debug/app-debug.apk
+android/app/build/intermediates/flutter/debug/flutter_assets/kernel_blob.bin
