--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_cart: ^0.0.6
   url_launcher: ^6.0.12
   lottie: ^1.2.1
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
